# pam_reason

./: .gitignore  Makefile  README.md
Rust/: Cargo.toml
Rust/src/: lib.rs
build-env/: docker-compose.yaml  docker-compose.yml
build-env/RHEL/: Containerfile
build-env/docker/: Dockerfile
build-env/podman/: Containerfile
packaging/: README.md
packaging/debian/: Makefile  changelog  control  rules
packaging/debian-tool/: control
packaging/rpm/: pam-purpose-tool.spec  pam-purpose.spec
src/c/: Makefile
src/c/src/: pam_purpose.8  pam_purpose.c  pam_require-purpose.c
src/doc/: Makefile  pam_purpose.8.md
src/rs/: Cargo.toml  Makefile  build.rs
test/: README.md  check_pam_purpose
