[package]
name = "pam_purpose_rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[lib]
crate-type = ["cdylib"] # Vigtigt: Kompiler som dynamisk bibliotek (.so)

[dependencies]
# nonstick er en aktivt vedligeholdt fork af den oprindelige 'pam-sys' og 'pam'
nonstick = "0.1.1" 
libc = "0.2"
syslog = "6.0" 
log = "0.4"
